--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="icon" type="image/png" href="img/techis-logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -29,6 +30,21 @@
           </div>
         </div>
       </nav>
+
+      <div id="about">
+      <h2><span class="font-primary">A</span>bout</h2>
+      <img src="img/Ashley.png">
+      <div class="name">Ashley Rakotoson</div>
+      <div class="vocation">Web Application Developer</div>
+      <div class="skills">HTML / CSS / Python / JavaScript</div>
+      <p>
+          Trilingual French girl living in Tokyo, Japan. Aspiring front-end developer. I am also a meme queen.
+      </p>
+      <div class="email">ashley.rakotoson@gmail.com</div>
+      <div class="icons">
+          <a href="https://github.com/AshleyRakotoson"><i class="bi bi-github"></i></a>
+          <a href="https://www.linkedin.com/in/ashley-r-938758166/"><i class="bi bi-linkedin ms-3"></i></a>
+      </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </body>
