--- a/index.html
+++ b/index.html
@@ -32,18 +32,67 @@
       </nav>
 
       <div id="about">
-      <h2><span class="font-primary">A</span>bout</h2>
-      <img src="img/Ashley.png">
-      <div class="name">Ashley Rakotoson</div>
-      <div class="vocation">Web Application Developer</div>
-      <div class="skills">HTML / CSS / Python / JavaScript</div>
-      <p>
-          Trilingual French girl living in Tokyo, Japan. Aspiring front-end developer. I am also a meme queen.
-      </p>
-      <div class="email">ashley.rakotoson@gmail.com</div>
-      <div class="icons">
-          <a href="https://github.com/AshleyRakotoson"><i class="bi bi-github"></i></a>
-          <a href="https://www.linkedin.com/in/ashley-r-938758166/"><i class="bi bi-linkedin ms-3"></i></a>
+            <h2><span class="font-primary">A</span>bout</h2>
+            <img src="img/ashley2.jpeg">
+            <div class="name">Ashley Rakotoson</div>
+            <div class="vocation">Web Application Developer</div>
+            <div class="skills">HTML / CSS / Python / JavaScript</div>
+            <p>
+                Trilingual French girl living in Tokyo, Japan. Aspiring front-end developer. I am also a meme queen.
+            </p>
+            <div class="email">ashley.rakotoson@gmail.com</div>
+            <div class="icons">
+                <a href="https://github.com/AshleyRakotoson"><i class="bi bi-github"></i></a>
+                <a href="https://www.linkedin.com/in/ashley-r-938758166/"><i class="bi bi-linkedin ms-3"></i></a>
+            </div>
+      </div>
+
+      <div id="projects">
+          <h2><span class="font-primary">P</span>rojects</h2>
+          
+            <div class="card mb-3">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="img/project-twitter.png" alt="Twitter Project">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title">Twitter Clone</h5>
+                    <p class="card-text">This is a Twitter based project using Django</p>
+                    <p class="card-text"><small class="text-muted">
+                      Test Login Account <br>
+                      Email : test@gmail.com <br>
+                      Password : 123456
+                    </small></p>
+                    <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
+                    <a href="#" target="_blank" class="btn btn-secondary">GitHub Link</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="card mb-3">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="img/project-netflix.png" alt="Netflix Project">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title">Netflix Clone</h5>
+                    <p class="card-text">This is a Netflix based project using HTML / CSS / JS</p>
+                    <p class="card-text"><small class="text-muted">
+                      Test Login Account <br>
+                      Email : test@gmail.com <br>
+                      Password : 123456
+                    </small></p>
+                    <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
+                    <a href="#" target="_blank" class="btn btn-secondary">GitHub Link</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
       </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
